--- a/posts-application-front-end/src/components/custom.css
+++ b/posts-application-front-end/src/components/custom.css
@@ -3,12 +3,14 @@
   bottom: 0; /* At the bottom. Use top:0 to append it to the top */
   background: rgba(0, 0, 0, 0.4); /* Black background with 0.5 opacity */
   color: #f1f1f1; /* Grey text */
-  width: 90%; /* Full width */
+  width: 90%;
+  max-height: 100px; /* Full width */
   padding: 4px; /* Some padding */
   margin-top: 5px;
-  height: 80px;
   font-weight: 200;
   line-height: 20%;
+  overflow: hidden;
+  display: inline-block;
 }
 .Comments {
   background: rgba(0, 0, 0, 0.4);
